2006-01-04  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/main_app.rb:

	Make sure all tree view columns (in both libraries and books views)
	are ellipsize at their end.

	* data/alexandria/glade/book_properties_dialog.glade,
	  data/alexandria/icons/smart_library.png,
	  data/alexandria/icons/smart_library_small.png,
	  data/alexandria/ui/popups.xml,
	  lib/alexandria/export_library.rb,
	  lib/alexandria/library.rb,
	  lib/alexandria/smart_library.rb,
	  lib/alexandria/ui.rb,
	  lib/alexandria/ui/acquire_dialog.rb,
	  lib/alexandria/ui/import_dialog.rb,
	  lib/alexandria/ui/main_app.rb,
	  lib/alexandria/ui/new_book_dialog.rb,
	  lib/alexandria/ui/new_smart_library_dialog.rb,
	  lib/alexandria/ui/smart_library_properties_dialog.rb,
	  lib/alexandria/ui/smart_library_properties_dialog_base.rb:

	- More work on the smart libraries (feature is almost complete) ;
	- Various refactoring changes / enhancements.

2006-01-02  Laurent Sansonetti  <lrz@gnome.org>

	Update copyright to 2006 to all source files.
	
	* lib/alexandria/ui/main_app.rb:

	Fixed right click on the books list view and make sure we grab the focus
	on the target widget.

2005-12-28  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/book_properties_dialog_base.rb:

	Remembers the latest directory selected by the file chooser, so that we
	use this directory for the next cover open action.

	* lib/alexandria/ui/new_book_dialog.rb:

	Fixed assertion while packing the pixbuf cell renderer.

	* lib/alexandria/ui/main_app.rb:

	- Added a keyboard shortcut (CTRL+SHIFT+N) for the manual add book 
	  action ;

	- Make sure we observe libraries that have just been added, and we remove
	  ourself from the observers list when the library has been removed.  This
	  fixes a bug when books added in new libraries were not displayed.

2005-12-15  Laurent Sansonetti  <lrz@gnome.org>

	* TODO,
	  data/alexandria/ui/menus.xml,
	  lib/alexandria.rb,
	  lib/alexandria/book.rb,